Fix display of code blocks in change descriptions (djblets version).
The way full-width code blocks were shown in change descriptions was incorrect
(things were offset oddly to the left, and there was a big extra margin added
at the bottom).

The fix involves changes to both djblets and Review Board. This change contains
the djblets side, which changes the default margin to just un-do the extra
spacing added by the padding and border. Additional overrides to this default
margin can happen on a case-by-case basis, for example, to account for specific
padding within an editor, or flush display within fields.

Testing done:
Verified the appearance of full-width code blocks in:
- Review request fields.
- The change description field in the review request draft header.
- The change description field in change description boxes.
- Field change diffs in change description boxes.
- Comments and headers in the review dialog.
- Comments and headers in reviews.
- Draft replies to reviews.
- Diff comment flag pop-ups.

Checked that all affected text editors with full-width code blocks didn't have
any vertical jumps when opening or closing the editor.

Reviewed at https://reviews.reviewboard.org/r/8363/

--- a/djblets/static/djblets/css/mixins/markdown.less
+++ b/djblets/static/djblets/css/mixins/markdown.less
@@ -193,16 +193,11 @@
   }
 
   .codehilite {
-    @codehilite-margin-vert: -(@code-block-border-size +
-                               @code-block-padding-vert);
-
     background-color: @code-block-bg;
     border: @inline-code-border-size solid @code-block-border-color;
     border-radius: @code-block-border-radius;
-    margin: @codehilite-margin-vert
-            0
-            @codehilite-margin-vert
-            -(@code-block-border-size + @code-block-padding-horiz);
+    margin: -(@code-block-padding-vert + @code-block-border-size)
+            -(@code-block-padding-horiz + @code-block-border-size);
     padding: @code-block-padding-vert @code-block-padding-horiz;
 
     pre {
